Reduce number of steps for upgrades
We don't need all the steps currently enabled for either batched
or concurrent updates, so decrease them.  In future we can perhaps
introspect the task tags during plan creation and set these
dynamically.

Change-Id: I0358886a332dfbecd03bc4a67086b08d25756c22
Partially-Implements: blueprint overcloud-upgrades-per-service

--- a/puppet/major_upgrade_steps.j2.yaml
+++ b/puppet/major_upgrade_steps.j2.yaml
@@ -1,5 +1,6 @@
-{% set upgrade_steps_max = 8 -%}
 {% set enabled_roles = roles|rejectattr('disable_upgrade_deployment')|list -%}
+{% set batch_upgrade_steps_max = 3 -%}
+{% set upgrade_steps_max = 6 -%}
 heat_template_version: ocata
 description: 'Upgrade steps for all roles'
 
@@ -35,7 +36,7 @@ conditions:
 resources:
 
 # Upgrade Steps for all roles, batched updates
-{% for step in range(0, upgrade_steps_max) %}
+{% for step in range(0, batch_upgrade_steps_max) %}
   {% for role in roles %}
   # Step {{step}} resources
   {{role.name}}UpgradeBatchConfig_Step{{step}}:
@@ -97,7 +98,7 @@ resources:
       {% endfor %}
   {% else %}
       {% for dep in roles %}
-      - {{dep.name}}UpgradeBatch_Step{{upgrade_steps_max -1}}
+      - {{dep.name}}UpgradeBatch_Step{{batch_upgrade_steps_max -1}}
       {% endfor %}
   {% endif %}
     properties:
@@ -116,7 +117,7 @@ resources:
       {% endfor %}
   {% else %}
       {% for dep in roles %}
-      - {{dep.name}}UpgradeBatch_Step{{upgrade_steps_max -1}}
+      - {{dep.name}}UpgradeBatch_Step{{batch_upgrade_steps_max -1}}
       {% endfor %}
   {% endif %}
     properties:
