Configure VNC Server listen address through t-h-t
This adds an entry for libvirt (which is used by the VNC server) on
which we can tell it via t-h-t on which IP address to listen on.

Change-Id: Ie377c09734e9f6170daa519aed69c53fc67c366b
Related-Bug: #1660099

--- a/network/service_net_map.j2.yaml
+++ b/network/service_net_map.j2.yaml
@@ -49,6 +49,7 @@ parameters:
       NovaPlacementNetwork: internal_api
       NovaMetadataNetwork: internal_api
       NovaVncProxyNetwork: internal_api
+      NovaLibvirtNetwork: internal_api
       Ec2ApiNetwork: internal_api
       Ec2ApiMetadataNetwork: internal_api
       SwiftStorageNetwork: storage_mgmt
