--- a/network/service_net_map.j2.yaml
+++ b/network/service_net_map.j2.yaml
@@ -43,6 +43,7 @@ parameters:
       NovaApiNetwork: internal_api
       NovaMetadataNetwork: internal_api
       NovaVncProxyNetwork: internal_api
+      NovaLibvirtNetwork: internal_api
       SwiftStorageNetwork: storage_mgmt
       SwiftProxyNetwork: storage
       SaharaApiNetwork: internal_api
