Validate that endpoint_map.yaml is up to date in the gate
Change-Id: I72aa48c72c825151739cb478c58e9a6c841c9130

--- a/tox.ini
+++ b/tox.ini
@@ -13,6 +13,7 @@ commands = {posargs}
 [testenv:pep8]
 commands =
     python ./tools/process-templates.py
+    python ./network/endpoints/build_endpoint_map.py --check
     python ./tools/yaml-validate.py .
 
 [testenv:templates]
