Ensure working compute node during the whole migration.
Fix subtile error introduced during the attempt to get the vm migration
after controller upgrade working.  Namely the server.cnf in the my.cnf.d
directory was updated with default values, which include listening to
127.0.0.1.  This overwrite the galera.cnf configuration and break the
link between the haproxy and the database, making the database
unavailable for services.  This happens only at convergence step where
the database is eventually restarted.

Beside fixing this bug, this is a rewrite at having the possibility for
the operator to manipulate instance during those states:
 - controllers upgraded/compute not upgraded (vm migration)
 - controllers upgraded/part of compute upgraded (vm migration)
 - controllers upgraded/all computes upgraded/no convergence

Change-Id: I22a9f1cde99c010d00c653861cc7cf34ab4cc06e
Closes-Bug: #1661202

--- a/extraconfig/tasks/major_upgrade_pacemaker.yaml
+++ b/extraconfig/tasks/major_upgrade_pacemaker.yaml
@@ -100,7 +100,10 @@ resources:
     properties:
       group: puppet
       config:
-        get_file: liberty_to_mitaka_nova_api_upgrade.pp
+        list_join:
+          - ''
+          - - get_file: liberty_to_mitaka_nova_api_upgrade.pp
+            - get_file: liberty_to_mitaka_nova_api_upgrade_conf.pp
 
   NovaApiDatabaseUpgradeDeployment:
     type: OS::Heat::SoftwareDeploymentGroup
@@ -110,26 +113,54 @@ resources:
       servers: {get_param: controller_servers}
       config: {get_resource: NovaApiDatabaseUpgradeConfig}
 
-  NovaApiDatabasePostConfig:
+  NovaApiDatabasePostUgradeRestartConfig:
     type: OS::Heat::SoftwareConfig
     properties:
       group: script
       config: |
         #!/bin/bash
-        set -eux
-        crudini --set /etc/nova/nova.conf api_database connection "$(hiera nova::api_database_connection)"
-        crudini --set /etc/nova/nova.conf neutron auth_plugin v3password
-        crudini --set /etc/nova/nova.conf neutron auth_url "$(hiera nova::api::identity_uri)"
-        if [ "$(hiera -c /etc/puppet/hiera.yaml bootstrap_nodeid)" = "$(facter hostname)" ]; then
-            nova-manage api_db sync
-            nova-manage db online_data_migrations
-        fi
-        systemctl restart openstack-nova-api
 
-  NovaApiDatabasePostUpgradeDeployment:
+        set -eux
+        # As per http://docs.openstack.org/developer/nova/upgrade.html
+        # restart conductor first and nova-api list.
+
+        # This is the best way to restart the whole nova stack.  It
+        # 100% of time leads to no transiant errors in pcs resources.
+        # conductor is the leaf of the pacemaker dependency graph and
+        # must be restarted first.  consoleauth is the root of this
+        # branch and will restart all nova service in this order:
+        # openstack-nova-consoleauth openstack-nova-novncproxy openstack-nova-api openstack-nova-scheduler openstack-nova-conductor
+        if [ "$(hiera -c /etc/puppet/hiera.yaml bootstrap_nodeid)" = "$(facter hostname)" ]; then
+            for res in openstack-nova-conductor openstack-nova-consoleauth ; do
+                pcs resource restart ${res}-clone --wait=600
+            done
+        fi
+
+  NovaApiDatabaseUpgradePostUpgradeRestartDeployment:
     type: OS::Heat::SoftwareDeploymentGroup
     depends_on: NovaApiDatabaseUpgradeDeployment
     properties:
-      name: NovaApiDatabasePostUpgradeDeployment
+      name: NovaApiDatabaseUpgradePostUpgradeRestartDeployment
       servers: {get_param: controller_servers}
-      config: {get_resource: NovaApiDatabasePostConfig}
+      config: {get_resource: NovaApiDatabasePostUgradeRestartConfig}
+
+  NovaApiComputePostConfig:
+    type: OS::Heat::SoftwareConfig
+    properties:
+      group: puppet
+      config:
+        list_join:
+        - ''
+        - - get_file: liberty_to_mitaka_nova_api_upgrade_conf.pp
+          - |
+            exec { '/bin/systemctl restart openstack-nova-compute': refreshonly => true }
+            Nova_config<| |> ~> Exec['/bin/systemctl restart openstack-nova-compute']
+
+
+  NovaApiComputePostUpgradeDeployment:
+    type: OS::Heat::SoftwareDeploymentGroup
+    depends_on: NovaApiDatabaseUpgradePostUpgradeRestartDeployment
+    properties:
+      name: NovaApiComputePostUpgradeDeployment
+      servers: {get_param: compute_servers}
+      config: {get_resource: NovaApiComputePostConfig}
