--- a/environments/major-upgrade-composable-steps.yaml
+++ b/environments/major-upgrade-composable-steps.yaml
@@ -1,3 +1,2 @@
 resource_registry:
-  OS::TripleO::UpgradeSteps: ../puppet/major_upgrade_steps.yaml
-  OS::TripleO::PostDeploySteps: OS::Heat::None
+  OS::TripleO::PostDeploySteps: ../puppet/major_upgrade_steps.yaml
