--- a/puppet/post-upgrade.j2.yaml
+++ b/puppet/post-upgrade.j2.yaml
@@ -1,8 +1,8 @@
 heat_template_version: ocata
 
 description: >
-  Post-deploy configuration steps via puppet for all roles,
-  as defined in ../roles_data.yaml
+  Post-upgrade configuration steps via puppet for all roles
+  where upgrade is not disabled as defined in ../roles_data.yaml
 
 parameters:
   servers:
@@ -21,4 +21,7 @@ parameters:
       perform configuration on a Heat stack-update.
 
 resources:
+# Note the include here is the same as post.j2.yaml but the data used at
+# the time of rendering is different if any roles disable upgrades
+{% set roles = roles|rejectattr('disable_upgrade_deployment')|list -%}
 {% include 'puppet-steps.j2' %}
