Switch item notation to jinja format
This change fixes the item variable notation in
puppet/services/ceph-osd.yaml.

Change-Id: I4d105619e4ac913b4a711bf91fea5f6e3c9b4caa
Closes-Bug: 1661339

--- a/puppet/services/ceph-osd.yaml
+++ b/puppet/services/ceph-osd.yaml
@@ -68,14 +68,14 @@ outputs:
           command: ceph osd set noscrub
         - name: Stop Ceph OSD
           tags: step1
-          service: name=ceph-osd@$item state=stopped
+          service: name=ceph-osd@{{ item }} state=stopped
           with_items: "{{osd_ids.stdout.strip().split()}}"
         - name: Update ceph OSD packages
           tags: step1
           yum: name=ceph-osd state=latest
         - name: Start ceph-osd service
           tags: step1
-          service: name=ceph-osd@$item state=started
+          service: name=ceph-osd@{{ item }} state=started
           with_items: "{{osd_ids.stdout.strip().split()}}"
         - name: ceph osd unset noout
           tags: step1
