CI: enable debug on multinode and upgrade job
We're running TripleO CI jobs outside TripleO projects (nova, gnocchi,
etc), folks need more debug to be helpful.

Change-Id: I512ad89d9ac82ae62f9cbe7d0029fb1ac7445cc9

--- a/ci/environments/multinode_major_upgrade.yaml
+++ b/ci/environments/multinode_major_upgrade.yaml
@@ -45,3 +45,4 @@ parameter_defaults:
     nova::compute::libvirt::libvirt_cpu_mode: 'none'
     heat::rpc_response_timeout: 600
   SwiftCeilometerPipelineEnabled: False
+  Debug: True
