--- a/ci/environments/multinode.yaml
+++ b/ci/environments/multinode.yaml
@@ -45,3 +45,4 @@ parameter_defaults:
     # Required for Centos 7.3 and Qemu 2.6.0
     nova::compute::libvirt::libvirt_cpu_mode: 'none'
   SwiftCeilometerPipelineEnabled: False
+  Debug: True
