--- a/puppet/services/memcached.yaml
+++ b/puppet/services/memcached.yaml
@@ -18,6 +18,12 @@ parameters:
     description: Mapping of service endpoint -> protocol. Typically set
                  via parameter_defaults in the resource registry.
     type: json
+  MemcachedMaxMemory:
+    default: '50%'
+    description: The maximum amount of memory for memcached to be configured
+                 to use when installed. This can be either a percentage ('50%')
+                 or a fixed value ('2048').
+    type: string
   MonitoringSubscriptionMemcached:
     default: 'overcloud-memcached'
     type: string
@@ -35,6 +41,7 @@ outputs:
         # internal_api_uri -> [IP]
         # internal_api_subnet - > IP/CIDR
         memcached::listen_ip: {get_param: [ServiceNetMap, MemcachedNetwork]}
+        memcached::max_memory: {get_param: MemcachedMaxMemory}
         tripleo.memcached.firewall_rules:
           '121 memcached':
             dport: 11211
