--- a/puppet/services/congress.yaml
+++ b/puppet/services/congress.yaml
@@ -64,8 +64,7 @@ outputs:
               - '@'
               - {get_param: [EndpointMap, MysqlInternal, host]}
               - '/congress'
-              - '?bind_address='
-              - "%{hiera('tripleo::profile::base::database::mysql::client_bind_address')}"
+              - '?read_default_file=/etc/my.cnf.d/tripleo.cnf&read_default_group=tripleo'
         congress::keystone::auth::tenant: 'service'
         congress::keystone::auth::password: {get_param: CongressPassword}
         congress::keystone::authtoken::auth_uri: {get_param: [EndpointMap, KeystoneInternal, uri]}
