--- a/puppet/services/tacker.yaml
+++ b/puppet/services/tacker.yaml
@@ -64,8 +64,7 @@ outputs:
               - '@'
               - {get_param: [EndpointMap, MysqlInternal, host]}
               - '/tacker'
-              - '?bind_address='
-              - "%{hiera('tripleo::profile::base::database::mysql::client_bind_address')}"
+              - '?read_default_file=/etc/my.cnf.d/tripleo.cnf&read_default_group=tripleo'
 
         tacker::keystone::auth::tenant: 'service'
         tacker::keystone::auth::password: {get_param: TackerPassword}
